--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 sudo: required
 language: generic
+
 services:
-	- docker
-	
+  - docker
+
 before_install:
-	- docker build -t prashy561/docker-react -f Dockerfile.dev .
+  - docker build -t stephengrider/docker-react -f Dockerfile.dev .
 
 script:
-    - docker run -e CI=true prashy561/docker-react npm run test
+  - docker run -e CI=true stephengrider/docker-react npm run tests
+  - random stuff
+  
